--- a/site/index.html
+++ b/site/index.html
@@ -3,29 +3,35 @@
 <head>
 <title>Galliard</title>
 <script type="text/javascript" src="http://fast.fonts.net/jsapi/5a35d5b7-f434-4e08-804e-b3447396894a.js"></script>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Galliard">
+<meta name="author" content="Galliard <support@galliard.xyz>">
 <style>
 body {
 font-family:'ITC Galliard W01 Roman';
 background: white;
 color: black;
-margin: 0;
-padding: 0 10pt;
-line-height: 100%;
+margin: 0 10% 0 10%;
+padding: 0;
 }
 h1 {
-font-family:'ITC Galliard W01 Roman';
-letter-spacing: .2vw;
-position: absolute;
-bottom: 0;
-right: 0;
-text-align: right;
+text-align: center;
 font-size: 32pt;
-font-size: 8vw;
+font-size: 6vw;
 font-weight: normal;
+border-bottom: 1px black solid;
+}
+div#mti_wfs_colophon img, footer {
+display: none;
 }
 </style>
 </head>
 <body>
 <h1>Galliard</h1>
+<footer>
+&copy;2015 Glen Campbell.
+All rights reserved.
+</footer>
 </body>
 </html>
